--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .pure-g#layout
+  .pure-g-r#layout
     .sidebar.pure-u-1.pure-u-med-1-4
       .header
         hgroup
