--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ block content
             li.nav-item
               a.pure-button(href="http://www.linkedin.com/pub/jesse-huang/36/4a5/998") LinkedIn
             li.nav-item
-              a.pure-button(href="http://stackoverflow.com/users/1137432/jh314") Stackoverflow
+              a.pure-button(href="http://stackoverflow.com/users/1137432/jh314") Stack Overflow
     .content.pure-u-1.pure-u-med-3-4
       div
         .home
@@ -35,4 +35,8 @@ block content
               li
                 a(href="/") About
               li
-                a(href="/") Github
+                a(href="https://github.com/jhuang314") Github
+              li
+                a(href="http://www.linkedin.com/pub/jesse-huang/36/4a5/998") LinkedIn
+              li
+                a(href="https://stackoverflow.com/users/1137432/jh314") Stack Overflow
