--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,10 +24,7 @@ html(lang="en")
     |     <link rel="stylesheet" href="/stylesheets/layouts/blog.css">
     | <!--<![endif]-->
 
-
-    //link(rel="stylesheet", href="http://bilalquadri.com/css/main.css")
-    //link(rel='stylesheet', href='/stylesheets/pure-min.css')
-    script(type='text/javascript', src='/javascripts/jquery-1.11.0.min.js')
+    script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(type='text/javascript').
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
