--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,26 @@ html(lang="en")
 
 
   body
-    block content
+    .pure-g-r#layout
+      .sidebar.pure-u-1.pure-u-med-1-4
+        .header
+          hgroup
+            h1.brand-title
+              a(href="/") Jesse Huang
+            h2.brand-tagline.
+              Rutgers University Student
+          nav.nav
+            ul.nav-list
+              li.nav-item
+                a.pure-button(href="https://github.com/jhuang314") GitHub
+              li.nav-item
+                a.pure-button(href="/blog") Blog
+              li.nav-item
+                a.pure-button(href="http://www.linkedin.com/pub/jesse-huang/36/4a5/998") LinkedIn
+              li.nav-item
+                a.pure-button(href="http://stackoverflow.com/users/1137432/jh314") Stack Overflow
+      .content.pure-u-1.pure-u-med-3-4
+        block content
 
     script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(type='text/javascript').
