--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(lang="en")
     title= title
     link(href="/images/favicon.png", rel="shortcut icon")
     link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css")
+    link(rel="stylesheet", href="http://yandex.st/highlightjs/8.0/styles/default.min.css")
 
     | <!--[if lte IE 8]>
     |     <link rel="stylesheet" href="/stylesheets/main-grid-old-ie.css">
@@ -43,6 +44,7 @@ html(lang="en")
       .content.pure-u-1.pure-u-med-3-4
         block content
 
+    script(type='text/javascript', src='http://yandex.st/highlightjs/8.0/highlight.min.js')
     script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(type='text/javascript').
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -60,3 +62,9 @@ html(lang="en")
               e.preventDefault();
           }, 'a[href="#"]');
       });
+    script.
+      hljs.initHighlightingOnLoad();
+    // script.
+    //   $(document).ready(function() {
+    //     $('pre code').each(function(i, e) {hljs.highlightBlock('js',e)});
+    //   });
