fixed disqus async loading, take 2

--- a/views/post.jade
+++ b/views/post.jade
@@ -17,7 +17,7 @@ block content
   section.comments
     div#disqus_thread
     script(data-cfasync="false", src="/javascript.js")
-    script(type="text/javascript").
+    script(data-cfasync="false", type="text/javascript").
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'jh3141'; // required: replace example with your forum shortname
 
