--- a/views/index.jade
+++ b/views/index.jade
@@ -4,9 +4,12 @@ block content
   div
     .home
       header
-        h1 Wassup dude?
+        h1 Wassup?
       p.
-        I am Jesse Huang
+        I am Jesse Huang, a senior at <a href="http://www.rutgers.edu")> Rutgers University</a>.  I am currently studying <a href="http://www.cs.rutgers.edu">Computer Science</a> and 
+        <a href="http://www.math.rutgers.edu">Math</a>.  
+        My hobbies include going to hackathons, juggling, and yo-yoing.
+        If you share any similar passions, hit me up!
     .footer
       .pure-menu.pure-menu-horizontal.pure-menu-open
         ul
