updated front page

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,9 +6,11 @@ block content
       header
         h1 Wassup?
       p.
-        I am Jesse Huang, a senior at <a href="http://www.rutgers.edu")> Rutgers University</a>.  I am currently studying <a href="http://www.cs.rutgers.edu">Computer Science</a> and 
-        <a href="http://www.math.rutgers.edu">Math</a>.  
+        I am Jesse Huang, a senior at <a href="http://www.rutgers.edu")> Rutgers University</a>.  
+        I am currently studying <a href="http://www.cs.rutgers.edu">Computer Science</a> and <a href="http://www.math.rutgers.edu">Math</a>.  
+      p.
         My hobbies include going to hackathons, juggling, and yo-yoing.
+      p.
         If you share any similar passions, hit me up!
     .footer
       .pure-menu.pure-menu-horizontal.pure-menu-open
