--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title= title
     link(href="/images/favicon.png", rel="shortcut icon")
-    link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css")
-    link(rel="stylesheet", href="http://yandex.st/highlightjs/8.0/styles/default.min.css")
+    link(rel="stylesheet", href="/stylesheets/pure-min.css")
 
     | <!--[if lte IE 8]>
     |     <link rel="stylesheet" href="/stylesheets/main-grid-old-ie.css">
@@ -22,7 +21,7 @@ html(lang="en")
     | <!--<![endif]-->
 
 
-  body
+  body(onload="prettyPrint()")
     .pure-g-r#layout
       .sidebar.pure-u-1.pure-u-med-1-4
         .header
@@ -44,8 +43,8 @@ html(lang="en")
       .content.pure-u-1.pure-u-med-3-4
         block content
 
-    script(type='text/javascript', src='http://yandex.st/highlightjs/8.0/highlight.min.js')
     script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
+    script(type='text/javascript', src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst")
     script(type='text/javascript').
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -62,9 +61,6 @@ html(lang="en")
               e.preventDefault();
           }, 'a[href="#"]');
       });
-    script.
-      hljs.initHighlightingOnLoad();
-    // script.
-    //   $(document).ready(function() {
-    //     $('pre code').each(function(i, e) {hljs.highlightBlock('js',e)});
-    //   });
+      $(document).ready(function() {
+        $("code").addClass("prettyprint");
+      });
